--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="skill-row">
         <img class="tutoring" src= "https://media2.giphy.com/media/l2YWweM2ueW6hHqxy/giphy.gif?cid=ecf05e47xchdhsazwz3hbcghf6k86dsosxrv28vy5hfbuow2&rid=giphy.gif&ct=g" alt="cheerleading">
         <h3>Tutoring</h3>
-        <p>Throughout my Undergraduate Degree, I volunteered at various local schools where I tutored students at different levels such as SATS and GCSE's. I taught Maths and English and this experience taught me patience and persistance.</p>
+        <p>During my Undergraduate Degree, I volunteered at various local schools where I tutored students at different levels such as SATS and GCSE's. I taught Maths and English and this experience taught me patience and persistance.</p>
       </div>
     </div>
     <hr>
